[gd_scene load_steps=20 format=3 uid="uid://dndq0a8q5mofo"]

[ext_resource type="Script" uid="uid://c8spk1p6h5e3e" path="res://addons/open-world-database/demo/resources/player/player.gd" id="1_b5nq1"]
[ext_resource type="AudioStream" uid="uid://5miird7u0rtl" path="res://addons/open-world-database/demo/resources/sound/hit.wav" id="2_l2acf"]
[ext_resource type="AudioStream" uid="uid://4fjrr2srfwda" path="res://addons/open-world-database/demo/resources/sound/swing.wav" id="3_1y1cw"]
[ext_resource type="AudioStream" uid="uid://bbsr8dl0t4hes" path="res://addons/open-world-database/demo/resources/sound/gem.wav" id="4_1y1cw"]
[ext_resource type="AudioStream" uid="uid://dbbx76qcmhdel" path="res://addons/open-world-database/demo/resources/sound/block.wav" id="4_ip1nt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rb33l"]
radius = 0.30506
height = 1.49928

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rb33l"]
radius = 0.3
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rb33l"]
albedo_color = Color(0, 1, 0.898039, 1)

[sub_resource type="TextMesh" id="TextMesh_4m6vg"]
text = ": D"
font_size = 1
pixel_size = 0.3085

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_upmx8"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4m6vg"]
height = 1.40356
radius = 0.254883

[sub_resource type="BoxShape3D" id="BoxShape3D_upmx8"]
size = Vector3(2, 2, 2)

[sub_resource type="PrismMesh" id="PrismMesh_rb33l"]
size = Vector3(0.1, 1, 0.1)

[sub_resource type="Animation" id="Animation_upmx8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.447056, 0.182493, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.353569, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4m6vg"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.58, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.447056, 0.182493, 0), Vector3(-0.759, 0.102, 0.771), Vector3(0.576, -0.123, 0.859), Vector3(-0.447056, 0.182493, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.58, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.659734, 0.614356, 1.4591), Vector3(1.23342, 2.84955, 1.96132), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l2acf"]
resource_name = "block"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0158163, 0.502158, 0.548936)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.33467)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1y1cw"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.447056, 0.182493, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeshInstance3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ip1nt"]
resource_name = "run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.353569, 0, 0), Vector3(0.156172, 0, 0), Vector3(0.353569, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.221119, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.447056, 0.182493, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d2yuf"]
_data = {
&"RESET": SubResource("Animation_upmx8"),
&"attack": SubResource("Animation_4m6vg"),
&"block": SubResource("Animation_l2acf"),
&"idle": SubResource("Animation_1y1cw"),
&"run": SubResource("Animation_ip1nt")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_b5nq1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rb33l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.938143, -0.346248, 0, 0.346248, 0.938143, 0, 0, 0)
mesh = SubResource("CapsuleMesh_rb33l")
surface_material_override/0 = SubResource("StandardMaterial3D_rb33l")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 0, 0, 1, 0.0505134, 0.21502, 0.314572)
mesh = SubResource("TextMesh_4m6vg")
surface_material_override/0 = SubResource("StandardMaterial3D_upmx8")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1, 2.59973e-08, -8.34678e-08, 0, 0.954761, 0.297375, 8.74228e-08, 0.297375, -0.954761, 0, 1.293, -1.649)

[node name="Hurtbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0509033, 0)
shape = SubResource("CylinderShape3D_4m6vg")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.8)
shape = SubResource("BoxShape3D_upmx8")

[node name="Sword" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.447056, 0.182493, 0)
mesh = SubResource("PrismMesh_rb33l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d2yuf")
}
speed_scale = 4.0
next/idle = &"block"
blend_times = [&"idle", &"RESET", 0.2, &"idle", &"attack", 0.2, &"idle", &"block", 0.2, &"idle", &"idle", 0.2, &"idle", &"run", 0.2]

[node name="sfx" type="Node3D" parent="."]

[node name="hit" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource("2_l2acf")

[node name="attack" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource("3_1y1cw")

[node name="gem" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource("4_1y1cw")
volume_db = -5.0
pitch_scale = 2.0

[node name="blocked" type="AudioStreamPlayer3D" parent="sfx"]
stream = ExtResource("4_ip1nt")
